# tanmatsu-template-ssh

./: sdkconfig_tanmatsu
main/: CMakeLists.txt  ethernet.c  main.c  sdcard.c  settings_ssh.c  settings_ssh.h  util_ssh.c
main/libvterm/include/: vterm.h
main/libvterm/src/: screen.c
